# aoc2024

./: pyproject.toml  run  run_go
days/day1/: day1lib.py  part1.py  part2.py
days/day10/: day10lib.py  part1.py  part2.py
days/day11/: day11lib.py  part1.py  part2.py
days/day12/: day12lib.py  part1.py  part2.py
days/day13/: day13lib.py  part1.py  part2.py
days/day14/: part1.py  part2.py
days/day15/: part1.py  part2.py
days/day16/: part1.py  part2.py
days/day17/: day17lib.py  part1.py  part2.py
days/day18/: part1.py  part2.py
days/day19/: part1.py  part2.py
days/day2/: day2lib.py  part1.py  part2.py
days/day20/: part1.py  part2.py
days/day21/: part1.py  part2.py
days/day22/: part1.py  part2.py
days/day23/: part1.py  part2.py
days/day3/: day3lib.py  part1.py  part2.py  test_part1.py  test_part2.py
days/day4/: day4lib.py  part1.py  part2.py
days/day5/: day5lib.py  part1.py  part2.py
days/day6/: day6lib.py  part1.py  part2.py
days/day7/: day7lib.py  part1.py  part2.py
days/day8/: day8lib.py  part1.py  part2.py
days/day9/: day9lib.py  part1.py  part2.py
go_aoc2024/day1/: main.go
go_aoc2024/day2/: main.go
go_aoc2024/day3/: main.go
go_aoc2024/day4/: main.go
go_aoc2024/day5/: main.go
go_aoc2024/day6/: main.go
go_aoc2024/day7/: main.go
go_aoc2024/day8/: main.go
go_aoc2024/utils/: utils.go
lib/: input.py  path.py  vm.py
