[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["Shen Li <shen@shenli.ca>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^2.1.3"
networkx = "^3.4.2"
matplotlib = "^3.9.3"
patina = "^0.5.0"
pytest = "^8.3.3"
ipython = "^8.30.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pydash = "^8.0.4"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
